# ece4960

./: README.md
lab1/: lab1.ino
lab10/: grid.txt  screenshot.py
lab10/dfs/: dfs.ino  main.py
lab10/lab10/: lab10_generate_query.ipynb  setup.sh
lab10/lab10_jupyter/: CMakeLists.txt  package.xml
lab10/scanning/: bt_test.py  main.py
lab10/search/: search.ino  settings.py
lab11/: K_poles_lqr_log.txt  pendulumControllerDynamics.py  pendulumParam.py  plotDataZ.py  runSimulation.py
lab12/: kalmanFilter.py  pendulumAnimation.py  pendulumNonlinearDynamics.py  pendulumParam.py  plotDataZ.py  runSimulation.py
lab2/: lab2.xlsx  main.py
lab2/ECE_4960_robot/: ECE_4960_robot.ino
lab3/: package.xml
lab3/lab3_base_code/: bash_aliases
lab3/src/: stageros.cpp
lab3_base_code/: setup.sh
lab4/: PID_ECE4960FastRobots.ipynb
lab4/MotorTest/: MotorTest.ino
lab4/UntetheredControl/: UntetheredControl.ino
lab4/imu.ino/: imu.ino.ino
lab4/lab4/: CMakeLists.txt  package.xml
lab4/lab4/msg/: PlotPose.msg
lab4/lab4/scripts/.ipynb_checkpoints/: lab4-checkpoint.ipynb
lab4/lab4/world/: empty.pgm  playground.world
lab4/lab4_base_code/: bash_aliases  setup.sh
lab4/launch/: work.launch
lab4/msg/: PlotPoint.msg  SimPose.msg
lab4/src/: stageros_lab4.cpp  teleop_keyboard.py
lab5/: CMakeLists.txt
lab5/data/: Proximity_Sensor_Data.xlsx  (+5 more)
lab6/: CMakeLists.txt  IMU Readings.xlsx  fourier.py  main.py  plot.py  sim_data_timing.xlsx  tapping_imu.csv  tmp.csv
lab7/: Scan Data.xlsx  line scans.xlsx  plot_map.py  rotation_matrix.m  tmp.csv  transform_matrix.m
lab8/: bash_aliases  finaloutput.txt  setup.sh
lab9/: lab9_doc.ipynb  lab9_real.ipynb  lab9_sim.ipynb  main.py  obs_data_0,0.xlsx  obs_range_data.xlsx  robot_interface.py  settings.py  ~$obs_range_data.xlsx
lab9_base_code/: setup.sh
(+94 files in other folders)
